# kb

./: .gitignore  .kt_dev_01.txt.swp  .kt_dev_yu.txt.swp  .kt_linux.txt.swp  README  codes-from-vm.code-workspace  kb-code.code-workspace  kt_dev.txt  kt_dev_01.txt  kt_dev_02.txt  kt_dev_03.txt  kt_dev_04.txt  kt_dev_05.txt  kt_dev_06.txt  kt_dev_07.txt  kt_dev_algo.txt  kt_dev_boost.txt  kt_dev_code.txt  kt_dev_cxx.txt  kt_dev_env.txt  kt_dev_java.txt  kt_dev_linux.txt  kt_dev_linux_from_sky.txt  kt_dev_lnx.txt  kt_dev_net.txt  kt_dev_pad.txt  kt_dev_py.txt  kt_dev_qt.txt  kt_dev_si.txt  kt_dev_si_log.txt  kt_dev_sky_mw.txt  kt_dev_splunk.txt  kt_dev_sql.txt  kt_dev_test.txt  kt_dev_toc.txt  kt_dev_video.txt  kt_dev_w3.txt  kt_dev_yu.txt  kt_linux.txt  kt_mhv.c  (+11 more)
code-cxx/algo/: CMakeLists.txt  algo.cpp  algo_ex.cpp  algo_pad.cpp  makefile  test_algo.cpp  test_algo_ex.cpp  test_algo_pad.cpp  test_leete.cpp  test_pad.cpp
code-cxx/algo/sort_comparisons/: makefile  run.sh  s161-ex.cpp  s161-ppp-hsort.cpp  s161-stl-set.cpp  s161-stl-sort-array.cpp  s161-stl-sort-vector-stream.cpp
code-cxx/boost/: CMakeLists.txt
code-cxx/cli/readline_qt/: CMakeLists.txt  console.cpp  console.h  readline.cpp  readline_qt.cpp
code-cxx/cxx/: CMakeLists.txt  aout.cpp  bridge.cpp  bridge.h  bridge_abs.cpp  bridge_client1.cpp  bridge_client2.cpp  bridge_con.cpp  bridge_con.h  bridge_p.h  case_1.cpp  cxx.cpp  cxx_case.cpp  cxx_ex.cpp  cxx_pattern.cpp  cxx_xx.cpp  makefile  rvo.cpp  sing.cpp  stl_vector.h.own  test_aout.cpp  test_boost.cpp  test_core_guideline.cpp  test_cpp.cpp  test_cxx.cpp  test_cxx_1.cpp  test_cxx_2.cpp  test_cxx_case.cpp  test_cxx_ex.cpp  test_cxx_pad.cpp  test_cxx_pattern.cpp  test_gcc.cpp  test_stl.cpp
code-cxx/cxx/base64/: CMakeLists.txt  test_base64.cpp
code-cxx/fsm/: CMakeLists.txt  dfsm.c  dfsm.cpp  dfsm.h  fsm_atm.cpp  fsm_ex.cpp  fsm_qt.cpp  makefile  message.h  qfsm.cpp  qfsm.h  qfsm_qt.cpp  qfsm_test.cpp  qfsm_use.cpp  qfsmqt.cpp  qfsmqt_test.cpp  qtfsm.cpp  qtfsm.h  sfsm.cpp  sfsm.h  statemachine.cpp  statemachine.h  test_cxxfsm.cpp  test_qfsm.cpp  test_qtfsm.cpp
code-cxx/fsm/case/: bleaudiostreamer.cpp  bleaudiostreamer.h  statemachine.cpp  statemachine.h
code-cxx/fsm/sms/: sms.c  watch.h
code-cxx/gdb/cpp-thread/: CMakeLists.txt  test_thread_1.cpp  test_thread_2.cpp
code-cxx/io/: CMakeLists.txt  poll_pipes.cpp  socket_client.c
code-cxx/os/: CMakeLists.txt  lpi_flock.cpp  lpi_flock_fcntl.cpp  lpi_lib.cpp  lpi_lib.h  lpi_sem_client.cpp  lpi_sem_server.cpp  lpi_socket_unix_server.cpp  sdbus_client_1.cpp  sdbus_server_1.cpp  sdevent.cpp  test_getopt_long.cpp  test_lpi.cpp  test_os.cpp  test_strace.cpp
code-cxx/os-dbus/qtdbus-case/: CMakeLists.txt  main.cpp
code-cxx/os-dbus/qtdbus-case/blercu/: CMakeLists.txt  blercucontroller.cpp  blercucontroller.h  blercucontroller_impl.h  blercucontroller_p.h
code-cxx/os-dbus/qtdbus-case/blercu/adaptors/: blercucontroller1_adaptor.cpp  blercucontroller1_adaptor.h
code-cxx/os-dbus/qtdbus-case/cmdlineoptions/: CMakeLists.txt  cmdlineoptions.cpp  cmdlineoptions.h
code-cxx/os-dbus/qtdbus-case/configsettings/: CMakeLists.txt  configmodelsettings.cpp  configmodelsettings.h  configsettings.cpp  configsettings.h
code-cxx/os-dbus/qtdbus-case/dbus/: CMakeLists.txt  dbusabstractadaptor.cpp  dbusabstractadaptor.h  dbusabstractinterface.h
code-cxx/os-dbus/qtdbus-case/resources/: config.default.json  config.eu-q-falconv2-it.json  irdb.qrc  resources.eu-q-falconv2-it.qrc  resources.eu-q-mr412-it.qrc  sky_ruwido_irdb_20180831.sqlite
code-cxx/os-dbus/qtdbus-case/test/: CMakeLists.txt  mck_blercucontroller.h  tst_blercucontrolleradaptor.cpp  tst_configsettings.cpp  tst_main.cpp  utl_dbuspropertychangespy.cpp  utl_dbuspropertychangespy.h  utl_dbussignalspy.cpp  utl_dbussignalspy.h  utl_eventloop.cpp  utl_eventloop.h
code-cxx/os-dbus/qtdbus-case/xml/: blercucontroller1_adaptor.org.cpp  blercucontroller1_adaptor.org.h
code-cxx/os-dbus/sdbus/: CMakeLists.txt  sdbus_client_1.cpp  sdbus_server_1.c  sdbus_server_1.cpp  test_sdbus.cpp
code-cxx/os-io/: CMakeLists.txt  io_bad_exclusive_open.cpp  io_copy.cpp  io_epoll_input.cpp  io_pipe_filter.cpp  io_pipe_popen.cpp  io_poll_pipes.cpp  io_popen_glob.cpp  io_select.cpp  io_simple_pipe.cpp  test_os_io.cpp
code-cxx/os-shared/dliterate/: CMakeLists.txt  driver.c  makefile  ml_main.c
code-cxx/os-shared/plugin/: CMakeLists.txt  main1.cpp  main2.cpp
code-cxx/os-shared/plugin/include/: renderer.h
code-cxx/os-shared/plugin/plugin1/: CMakeLists.txt  plugin1.cpp
code-cxx/os-shared/plugin/plugin2/: CMakeLists.txt  plugin2.cpp
code-cxx/os-shared/plugin/so1/: CMakeLists.txt
code-cxx/os-signal/: CMakeLists.txt  lpi_signal_1.cpp  lpi_signal_2.cpp  lpi_signal_3.cpp  lpi_signal_receiver.cpp  lpi_signal_sender.cpp
code-cxx/os/process/: CMakeLists.txt  test_process_closeonexec.cpp  test_process_envargs.cpp  test_process_execve.cpp
code-cxx/os/pthread/: CMakeLists.txt  test_pthread.cpp  test_thread_specific_data.cpp
code-cxx/string/: CMakeLists.txt  ex_string.cpp  ex_string_pad.cpp  makefile  string.cpp  string_01.cpp  string_02.cpp  string_ex.cpp  test_string_1.cpp  test_string_2.cpp  test_string_3.cpp  test_string_pad.cpp  test_string_sso.cpp  test_string_view.cpp
code-cxx/test_catch/: CMakeLists.txt  test_catch.cpp  test_x.cpp
code-make/cmake/fetch/: CMakeLists.txt
code-make/cmake/project/: CMakeLists.txt  readme
code-make/cmake/project/apps/: CMakeLists.txt  app.cxx
code-make/cmake/project/src/: CMakeLists.txt  Student.cxx
code-make/cmake/project/tests/: CMakeLists.txt
code-make/cmake/step3/: CMakeLists.txt
code-make/cmake/step3/src/: Student.cxx
code-qt/ctut-06/: CMakeLists.txt  main.cpp
code-qt/qtest/: CMakeLists.txt  qclass.cpp  qclass.h  qstandalone.cpp  qtest.cpp  test_qt.cpp
code-qt/test_catch/: CMakeLists.txt  test_qt.cpp
code-qt/test_catch/class/: CMakeLists.txt  class.cpp  class.h
code-qt/tut-07/: CMakeLists.txt  main.cpp
srcs/httpsend-0.0/: Makefile.in  configure  configure.ac  httpsend-0.0.patch
srcs/httpsend-0.0/src/: Makefile.in  httpsend.c
(+970 files in other folders)
